<resources>
    <string name="app_name" translatable="false">Tweeqold VPN</string>
    <string name="notifcation_title">Tweeqold VPN - %s</string>
    <string name="app_description" translatable="false">Tweeqold VPN: Ultimate VPN</string>
    <string name="url_privacy_policy" translatable="false">https://vpntweeqold.web.app/privacy_policy.html</string>
    <string name="app_privacy_policy_bottom" translatable="false">
By clicking, you agree to our Terms. Find out how we process your data in our
        <a href="https://vpntweeqold.web.app/privacy_policy.html">Privacy Policy</a> and
        <a href="https://vpntweeqold.web.app/privacy_policy.html">Cookies Policy.</a>
    </string>
    <string name="sex_male" translatable="false">Male</string>
    <string name="sex_female" translatable="false">Female</string>
    <string name="all_rights_reserved" translatable="false">Copyright © %1s. All Rights Reserved.</string>
    <string name="free" translatable="false">Free</string>
    <string name="app_id" translatable="false">ca-app-pub-5111357348858303~6343827437</string>
    <string name="b1" translatable="false">ca-app-pub-5111357348858303/6781745478</string>
    <string name="action_register">Create account</string>
    <string name="mainText">Your Digital Fortress! Trust Tweeqold VPN to safeguard your online activities, making your virtual world a secure haven.</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="action_settings">Settings</string>
    <string name="home_btn_choose_country">Choose country</string>
    <string name="home_pop_up_title_choose_country">Choose country</string>
    <string name="server_btn_connect">TAP TO CONNECT</string>
    <string name="server_btn_disconnect">Disconnect</string>
    <string name="server_error_loading_profile">Error loading profile</string>
    <string name="server_txt_status">Status connection:</string>
    <string name="server_not_connected">VPN not connected</string>
    <string name="loading_text">Loading…</string>
    <string name="downloading_csv_text">Getting free servers…</string>
    <string name="parsing_csv_text">Parsing free servers…</string>
    <string name="csv_file_error">Problem with a file reading…</string>
    <string name="csv_file_error_parsing">Problem with a file parsing…</string>
    <string name="network_error">Network error…</string>
    <string name="successfully_loaded">Redirecting.. </string>
    <string name="action_share">Share</string>
    <string name="ok">OK</string>
    <string name="network_error_message">Internet is not available, reconnect network and try again.</string>
    <string name="action_current_connection">Current connection</string>
    <string name="random_connection">Quick connection</string>
    <string name="total_servers">%1$d</string>
    <string name="loading_additional_servers">The loading of additional servers</string>
    <string name="connect_on_start">Connect on start</string>
    <string name="connect_on_start_summary">Connect when application is started</string>
    <string name="choose_country_priority">Choose country priority</string>
    <string name="choose_country_priority_summary">If not enabled then use random connection</string>
    <string name="choose_country">Choose country</string>
    <string name="error_random_country">Server with priority country %1$s is not available</string>
    <string name="success_pop_up_title"><b>You are successfuly connected!
        \n Let\'s try it out?</b></string>
    <string name="open_playmarket">Open PlayMarket</string>
    <string name="open_browser">Open browser</string>
    <string name="show_my_desktop">Show my desktop</string>
    <string name="stay_to_try_something_else">Stay to try something else</string>
    <string name="automatic_switching">Automatic switching</string>
    <string name="automatic_switching_category">Automatic switching</string>
    <string name="automatic_switching_set_seconds">Set seconds</string>
    <string name="automatic_switching_summary">Automatic switching to the same country server after some seconds, if this connecting impossible.</string>
    <string name="choose_country_priority_category">Country priority</string>
    <string name="connect_on_start_category">Auto start on boot</string>
    <string name="try_another_server_text">Do you want try another server?</string>
    <string name="try_another_server_ok">Yes</string>
    <string name="try_another_server_no">No</string>
    <string name="traffic_in">Downloaded: %1$s</string>
    <string name="traffic_out">Uploaded: %1$s</string>
    <string name="traffic_totally"><b>Totally through the application</b></string>
    <string name="unknown_state">Unknown state</string>
    <string name="state_user_vpn_permission">Waiting for user permission to use VPN API</string>
    <string name="no_vpn_support_image">Your image does not support the VPNService API, sorry :(</string>
    <string name="cancel_connection">Disconnect</string>
    <string name="last_eVPN_tun_config">Opening tun interface:</string>
    <string name="opentun_no_ipaddr">Refusing to open tun device without IP information</string>
    <string name="route_rejected">Route rejected by Android</string>
    <string name="dns_server_info">DNS Server: %1$s, Domain: %2$s</string>
    <string name="routes_info_excl">Routes excluded: %1$s %2$s</string>
    <string name="tun_open_error">Failed to open the tun interface</string>
    <string name="tun_error_helpful">On some custom ICS images the permission on /dev/tun might be wrong, or the tun module might be missing completely. For CM9 images try the fix ownership option under general settings</string>
    <string name="route_not_netip">Corrected route %1$s/%2$s to %3$s/%2$s</string>
    <string name="keychain_access">Cannot access the Android Keychain Certificates. This can be caused by a firmware upgrade or by restoring a backup of the app/app settings. Please edit the VPN and reselect the certificate under basic settings to recreate the permission to access the certificate.</string>
    <string name="no_keystore_cert_selected">You must select a User certificate</string>
    <string name="custom_route_format_error">Error parsing the custom routes</string>
    <string name="no_error_found">No error found</string>
    <string name="local_ip_info">Local IPv4: %1$s/%2$d IPv6: %3$s MTU: %4$d</string>
    <string name="routes_info_incl">Routes: %1$s %2$s</string>
    <string name="routes_debug">VpnService routes installed: %1$s %2$s</string>
    <string name="route_not_cidr">Cannot make sense of %1$s and %2$s as IP route with CIDR netmask, using /32 as netmask.</string>
    <string name="ip_not_cidr">Got interface information %1$s and %2$s, assuming second address is peer address of remote. Using /32 netmask for local IP. Mode given by eVPN is \"%3$s\".</string>
    <string name="ipv4_format_error">Error parsing the IPv4 address</string>
    <string name="pkcs12_file_encryption_key">PKCS12 File Encryption Key</string>
    <string name="private_key_password">Private Key Password</string>
    <string name="password">Password</string>
    <string name="building_configration">Building configuration…</string>
    <string name="netstatus">Network Status: %s</string>
    <string name="keychain_nocacert">No CA Certificate returned while reading from Android keystore. Authentication will probably fail.</string>
    <string name="mobile_info">%10$s %9$s running on %3$s %1$s (%2$s), Android %6$s (%7$s) API %4$d, ABI %5$s, (%8$s)</string>
    <string name="error_rsa_sign">Error signing with Android keystore key %1$s: %2$s</string>
    <string name="warn_no_dns">No DNS servers being used. Name resolution may not work. Consider setting custom DNS Servers. Please also note that Android will keep using your proxy settings specified for your mobile/Wi-Fi connection when no DNS servers are set.</string>
    <string name="dns_add_error">Could not add DNS Server \"%1$s\", rejected by the system: %2$s</string>
    <string name="ip_add_error">Could not configure IP Address \"%1$s\", rejected by the system: %2$s</string>
    <string name="getproxy_error">Error getting proxy settings: %s</string>
    <string name="using_proxy">Using proxy %1$s %2$d</string>
    <string name="session_ipv4string">%1$s - %2$s</string>
    <string name="session_ipv6string">%1$s - %3$s, %2$s</string>
    <string name="minidump_generated">Tweeqold VPN crashed unexpectedly. Please consider using the send Minidump option in the main menu</string>
    <string name="state_connecting">Connecting</string>
    <string name="state_wait">Waiting for server reply</string>
    <string name="state_auth">Authenticating</string>
    <string name="state_get_config">Getting client configuration</string>
    <string name="state_assign_ip">Assigning IP addresses</string>
    <string name="state_add_routes">Adding routes</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnected">Disconnect</string>
    <string name="state_reconnecting">Reconnecting</string>
    <string name="state_exiting">Exiting</string>
    <string name="state_noprocess">Not running</string>
    <string name="state_resolve">Resolving host names</string>
    <string name="state_tcp_connect">Connecting (TCP)</string>
    <string name="state_auth_failed">Authentication failed</string>
    <string name="state_nonetwork">Waiting for usable network</string>
    <string name="statusline_bytecount">↓%2$s/s %1$s - ↑%4$s/s %3$s</string>
    <string name="notifcation_title_notconnect">VPN not connected</string>
    <string name="jelly_keystore_alphanumeric_bug">Some versions of Android 4.1 have problems if the name of the keystore certificate contains non alphanumeric characters (like spaces, underscores or dashes). Try to reimport the certificate without special characters</string>
    <string name="built_by">built by %s</string>
    <string name="debug_build">debug build</string>
    <string name="official_build">official build</string>
    <string name="screenoff_pause">Pausing connection in screen off state: less than %1$s in %2$ss</string>
    <string name="screen_nopersistenttun">Warning: Persistent tun not enabled for this VPN. Traffic will use the normal Internet connection when the screen is off.</string>
    <string name="pauseVPN">Pause VPN</string>
    <string name="resumevpn">Resume VPN</string>
    <string name="state_userpause">VPN pause requested by user</string>
    <string name="state_screenoff">VPN paused - screen off</string>
    <string name="cannotparsecert">Cannot display certificate information</string>
    <string name="keyChainAccessError">KeyChain Access error: %s</string>
    <string name="unhandled_exception">Unhandled exception: %1$s\n\n%2$s</string>
    <string name="unhandled_exception_context">%3$s: %1$s\n\n%2$s</string>
    <string name="ip_looks_like_subnet">Vpn topology \"%3$s\" specified but ifconfig %1$s %2$s looks more like an IP address with a network mask. Assuming \"subnet\" topology.</string>
    <string name="allowed_vpn_apps_info">Allowed VPN apps: %1$s</string>
    <string name="disallowed_vpn_apps_info">Disallowed VPN apps: %1$s</string>
    <string name="app_no_longer_exists">Package %s is no longer installed, removing it from app allow/disallow list</string>
    <string name="remote_no_server_selected">You need to define and enable at least one remote server.</string>
    <string name="ignore_multicast_route">Ignoring multicast route: %s</string>
    <string name="service_restarted">Restarting eVPN Service (App crashed probably crashed or killed for memory pressure)</string>
    <string name="no_allowed_app">No allowed app added. Adding ourselves (%s) to have at least one app in the allowed app list to not allow all apps</string>
</resources>