<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="70dp">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_reg_form_icon"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="70dp"
        android:paddingBottom="110dp">


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="name" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:paddingStart="22dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp">

            <RadioButton
                android:id="@+id/sex_male"
                style="@style/AppTheme.AuthRB1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:checked="true"
                android:text="@string/sex_male" />

            <RadioButton
                android:id="@+id/sex_female"
                style="@style/AppTheme.AuthRB1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/sex_female" />
        </RadioGroup>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="password" />

        <Button
            android:id="@+id/action_register"
            style="@style/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/action_register" />

    </LinearLayout>
</RelativeLayout>
